--- a/sass/foundation/_settings.scss
+++ b/sass/foundation/_settings.scss
@@ -6,9 +6,6 @@
 // FOUNDATION SETTINGS
 //
 
-// This is the default html and body font-size for the base rem value.
-$rem-base: 10px;
-
 // Allows the use of rem-calc() or lower-bound() in your settings
 @import "foundation/functions";
 
@@ -22,6 +19,8 @@ $experimental: true;
 // set $rem-base to $base-font-size and make sure $base-font-size is a px value.
 $base-font-size: 10px;
 
+// This is the default html and body font-size for the base rem value.
+$rem-base: $base-font-size;
 
 // We use this to control whether or not CSS classes come through in the gem files.
 $include-html-classes: true;
@@ -40,11 +39,11 @@ $total-columns: 24;
 $column-gutter: rem-calc(12);
 
 // Media Query Ranges
-$small-range:    (0em, 48em);
-$medium-range:   (48.063em, 80em);
-$large-range:    (80.063em, 112em);
-$xlarge-range:   (112.063em, 128em);
-$xxlarge-range:  (128.063em, 99999999em);
+$small-range:    (0, 480px);
+$medium-range:   (481px, 800px);
+$large-range:    (801px, 1120px);
+$xlarge-range:   (1121px, 1280px);
+$xxlarge-range:  (1281px, 99999999px);
 
 $screen: "only screen";
 
