--- a/sass/foundation/_settings.scss
+++ b/sass/foundation/_settings.scss
@@ -9,8 +9,6 @@
 // Allows the use of rem-calc() or lower-bound() in your settings
 @import "foundation/functions";
 
-$experimental: true;
-
 // The default font-size is set to 100% of the browser style sheet (usually 16px)
 // for compatibility with browser-based text zoom or user-set defaults.
 
@@ -22,21 +20,13 @@ $base-font-size: 10px;
 // This is the default html and body font-size for the base rem value.
 $rem-base: $base-font-size;
 
-// We use this to control whether or not CSS classes come through in the gem files.
-$include-html-classes: true;
-$include-print-styles: true;
-$include-html-global-classes: $include-html-classes;
-
 // Grid
-
-$include-html-grid-classes: $include-html-classes;
-$include-xl-html-grid-classes: false;
 
 // We are using a 1280/24 Grid, this hopefully allows us to maintain and ad based
 // structure for the majority of our content publishing clients.
-$row-width: rem-calc(1280);
+$row-width: 128rem;
 $total-columns: 24;
-$column-gutter: rem-calc(12);
+$column-gutter: 1.2rem;
 
 // Media Query Ranges
 $small-range:    (0, 480px);
@@ -65,19 +55,11 @@ $xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max
 $xxlarge-up: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})";
 $xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (max-width:#{upper-bound($xxlarge-range)})";
 
-// Legacy
-// $small: $medium-up;
-// $medium: $medium-up;
-// $large: $large-up;
-
 // Block Grid
-
-$include-html-block-grid-classes: $include-html-classes;
-$include-xl-html-block-grid-classes: false;
 
 // We use this to control the maximum number of block grid elements per row
 $block-grid-elements: 12;
-$block-grid-default-spacing: rem-calc(20);
+$block-grid-default-spacing: 2rem;
 $align-block-grid-to-grid: false;
 
 
