- further stripping of unneeded foundation grid code

--- a/sass/foundation/components/_grid.scss
+++ b/sass/foundation/components/_grid.scss
@@ -10,18 +10,18 @@
 $include-html-grid-classes: $include-html-classes !default;
 $include-xl-html-grid-classes: false !default;
 
-$row-width: rem-calc(1000) !default;
-$total-columns: 12 !default;
+// $row-width: rem-calc(1000) !default;
+// $total-columns: 12 !default;
 
 //
 // Grid Functions
 //
 
 // Deprecated: We'll drop support for this in 5.1, use grid-calc()
-@function gridCalc($colNumber, $totalColumns) {
-  @warn "gridCalc() is deprecated, use grid-calc()";
-  @return grid-calc($colNumber, $totalColumns);
-}
+// @function gridCalc($colNumber, $totalColumns) {
+//   @warn "gridCalc() is deprecated, use grid-calc()";
+//   @return grid-calc($colNumber, $totalColumns);
+// }
 
 // @FUNCTION
 // $colNumber - Found in settings file
