--- a/sass/foundation/components/_global.scss
+++ b/sass/foundation/components/_global.scss
@@ -87,10 +87,10 @@
 // @mixins
 //
 // We use this to add box-sizing across browser prefixes
-@mixin box-sizing($type:border-box) {
-  -webkit-box-sizing: $type; // Android < 2.3, iOS < 4
-	   -moz-box-sizing: $type; // Firefox < 29
-	        box-sizing: $type; // Chrome, IE 8+, Opera, Safari 5.1
+// @mixin box-sizing($type:border-box) {
+//   -webkit-box-sizing: $type; // Android < 2.3, iOS < 4
+// 	   -moz-box-sizing: $type; // Firefox < 29
+// 	        box-sizing: $type; // Chrome, IE 8+, Opera, Safari 5.1
 }
 
 // @mixins
