- remove rem leftovers for includes - fix box sizing mixin issues

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -4,7 +4,7 @@ h1, h2, h3, h4, h5, h6 {}
 
 h1,
 h1 a {
-	@include rem(font-size, 2.6);
+	font-size: 2.6rem;
 	&.site-title {
 		a {
 
@@ -21,29 +21,29 @@ h1 a {
 }
 
 h2 {
-	@include rem(font-size, 2.4);
+	font-size: 2.4rem;
 	&.comments-title {
 
 	}
 }
 
 h3 {
-	@include rem(font-size, 2.2);
+	font-size: 2.2rem;
 	&.reply-title {
 
 	}
 }
 
 h4 {
-	@include rem(font-size, 2);
+	font-size: 2rem;
 }
 
 h5 {
-	@include rem(font-size, 1.8);
+	font-size: 1.8rem;
 }
 
 h6 {
-	@include rem(font-size, 1.6);
+	font-size: 1.6rem;
 }
 
 p {
