--- a/sass/foundation/components/_global.scss
+++ b/sass/foundation/components/_global.scss
@@ -91,7 +91,7 @@
 //   -webkit-box-sizing: $type; // Android < 2.3, iOS < 4
 // 	   -moz-box-sizing: $type; // Firefox < 29
 // 	        box-sizing: $type; // Chrome, IE 8+, Opera, Safari 5.1
-}
+// }
 
 // @mixins
 //
