--- a/sass/preprocess/_mixins.scss
+++ b/sass/preprocess/_mixins.scss
@@ -100,3 +100,4 @@
 	-webkit-box-sizing: $type; // Android < 2.3, iOS < 4
 	-moz-box-sizing: $type; // Firefox < 29
 	box-sizing: $type; // Chrome, IE 8+, Opera, Safari 5.1
+}
